Created less files to start styling website

--- a/less/index.less
+++ b/less/index.less
@@ -1,2 +1,19 @@
-body {
-}
+
+// less-watch-compiler less css index.less
+
+//Variables and Mixins
+@import "variables";
+@import "mixins";
+
+//Globals
+@import "global";
+
+//Body
+@import "navigation.less";
+//about
+//skills
+//portfolio
+//experience
+//contact
+//footer
+
