--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,7 @@ p{
   text-transform: uppercase;
 }
 
+/* May need to button tags to a tags so that we can use href attribute */
 .btn-group {
   color: white;
 }
@@ -51,7 +52,13 @@ p{
 }
 
 .card {
-  
+  -webkit-box-shadow: 0px 7px 12px 1px rgba(0,0,0,0.47);
+     -moz-box-shadow: 0px 7px 12px 1px rgba(0,0,0,0.47);
+          box-shadow: 0px 7px 12px 1px rgba(0,0,0,0.47);
+}
+
+.section-margin{
+  margin: 80px auto 130px;
 }
 
 
@@ -66,6 +73,10 @@ nav {
   background-color: #00A1A7;
   border-bottom: 3px solid #E31B6D ;
   font-size: 22px;
+  -webkit-box-shadow: 0px 4px 12px 1px rgba(0,0,0,0.65);
+     -moz-box-shadow: 0px 4px 12px 1px rgba(0,0,0,0.65);
+          box-shadow: 0px 4px 12px 1px rgba(0,0,0,0.65);
+
 }
 
 nav .nav-item {
@@ -74,6 +85,7 @@ nav .nav-item {
 
 .navbar-toggler{
   border-color: white;
+  margin: 10px 0;
 }
 
 .navbar-toggler-icon {
@@ -119,7 +131,18 @@ nav .nav-item {
   margin: 15px 0;
 }
 
+/* Skills */
 
+
+/* Portfolio */
+
+.portfolio-card {
+  border: 2px solid #E31B6D;
+}
+
+.card-img-top {
+  border-bottom: 2px solid #1B242F
+}
 
 
 /* Footer */
@@ -132,5 +155,3 @@ footer p{
   color: white;
 }
 
-
-/* Skills */
