--- a/css/index.css
+++ b/css/index.css
@@ -199,20 +199,105 @@ nav .nav-item {
   margin: 10px 0px 20px;
 }
 
-.card-btn {
-  background: #E31B6D;
-  background-image: radial-gradient( #cf1460, #c00f57, #b20a4e, #a40546);
-  border: 1px solid #570124;
-  border-radius: 50%;
-  color: white;
-  font-size: 22px;
-  margin: 30px 40px;
-  padding: 20px;
+/*Pink Colors #cf1460, #c00f57, #b20a4e, #a40546, #96013e */
+/*  */
+.hovereffect {
+  background-color: #cf1460;
+  width: 100%;
+  height: 100%;
+  float: left;
+  letter-spacing: 2px;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  cursor: default;
+}
+
+/* Overlay */
+.hovereffect .overlay {
+  background: rgba(0, 0, 0, 0.6); 
+  position: absolute;
+  border: 1px solid #FFF;
+  overflow: hidden;
+  width: 80%;
+  height: 80%;
+  left: 10%;
+  top: 10%;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+          transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: scale(0,1);
+      -ms-transform: scale(0,1);
+          transform: scale(0,1);
+}
+
+.hovereffect:hover .overlay {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
+}
+
+/* card image */
+.hovereffect img {
+  display: block;
+  position: relative;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+}
+
+.hovereffect:hover img {
+  opacity: 0.2;
+  filter: alpha(opacity=20);
+  -webkit-transform: translate3d(0,0,0);
+          transform: translate3d(0,0,0);
+}
+
+.hovereffect h4 {
   text-transform: uppercase;
+  text-align: center;
+  position: relative;
+  font-size: 18px;
+  background-color: transparent;
+  color: #FFF;
+  padding: 40px 0 15px;
+}
+
+.hovereffect a {
+  /* text-transform: uppercase; */
+  background: rgba(0, 0, 0, 0.6); 
+  border:0.1px solid  #e6feff;
+  font-size: 14px;
+  padding: 5px 15px;
   transition: all 0.3s ease-in-out ;
 }
 
+.hovereffect a:hover {
+  color: #02f7ff;
+  -webkit-box-shadow: 0px 0px 7px  #affcff;
+  transition: all 0.3s ease-in-out ;
+  
+}
 
+.hovereffect a, .hovereffect p {
+  color: #FFF;
+  margin-top: 30px;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+          transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(0,100%,0);
+  transform: translate3d(0,100%,0);
+}
+
+.hovereffect:hover a, .hovereffect:hover p, .hovereffect:hover h2 {
+  
+  opacity: 1;
+  filter: alpha(opacity=100);
+  text-decoration: none;
+  -webkit-transform: translate3d(0,0,0);
+          transform: translate3d(0,0,0);
+}
 
 
 /* Experience */
