--- a/css/index.css
+++ b/css/index.css
@@ -241,10 +241,9 @@ nav {
 
 .header-info h4 {
   color: white;
-  /* font-size: 30px; */
   font-weight: 400;
   line-height: 36px;
-  margin: 20px 0;
+  margin: 20px 0 0px;
 }
 
 /**************SKILLS**************/
